Updated Docker files to use the .env as a build argument

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,10 +16,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application code.
 COPY app.py ./
-COPY ../.env ./
 
-# Load .env file inside the container
-ENV $(cat .env | xargs)
+# Allow .env to be passed as a build argument
+ARG ENV_FILE=.env
+COPY ${ENV_FILE} .env
 
 # Expose the port the app runs on.
 EXPOSE 5001
