--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # MongoDB configuration
-MONGO_HOST=localhost
+MONGO_HOST=0.0.0.0
 MONGO_PORT=27017
 
 # Backend service configuration
-BACKEND_HOST=127.0.0.1
+BACKEND_HOST=0.0.0.0
 BACKEND_PORT=5001
 
 # Frontend service configuration
-FRONTEND_HOST=127.0.0.1
+FRONTEND_HOST=0.0.0.0
 FRONTEND_PORT=5000
