updated mongo host

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # MongoDB configuration
-MONGO_HOST=localhost
+MONGO_HOST=app-mongodb
 MONGO_PORT=27017
 
 # Backend service configuration
-BACKEND_HOST=0.0.0.0
+BACKEND_HOST=backend
 BACKEND_PORT=5001
 
 # Frontend service configuration
-FRONTEND_HOST=0.0.0.0
+FRONTEND_HOST=frontend
 FRONTEND_PORT=5000
