Changed host configuration to allow communication within docker

--- a/.env
+++ b/.env
@@ -2,10 +2,13 @@
 MONGO_HOST=app-mongodb
 MONGO_PORT=27017
 
-# Backend service configuration
-BACKEND_HOST=backend
+# For the backend container: use a bind address of 0.0.0.0
+BACKEND_BIND_HOST=0.0.0.0
 BACKEND_PORT=5001
 
-# Frontend service configuration
-FRONTEND_HOST=frontend
+# For the frontend to connect to the backend, use the service name.
+BACKEND_SERVICE_HOST=backend
+
+# For the frontend container: bind on 0.0.0.0 as well.
+FRONTEND_HOST=0.0.0.0
 FRONTEND_PORT=5000
