--- a/deployments/mongo-deployment.yaml
+++ b/deployments/mongo-deployment.yaml
@@ -20,9 +20,15 @@ spec:
         command: ["mongod", "--bind_ip_all"]
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
-          value: "admin"
+          valueFrom:
+            secretKeyRef:
+              name: app-secret
+              key: MONGO_USERNAME
         - name: MONGO_INITDB_ROOT_PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: app-secret
+              key: MONGO_PASSWORD
         ports:
         - containerPort: 27017
         volumeMounts:
@@ -30,4 +36,4 @@ spec:
           mountPath: /data/db
       volumes:
       - name: mongo-data
-        emptyDir: {} # For production, consider using a PersistentVolumeClaim.
+        emptyDir: {} 
