Updated mongo host to be mongodb

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB configuration
-MONGO_HOST=app-mongodb
+MONGO_HOST=mongodb
 MONGO_PORT=27017
 
 # For the backend container: use a bind address of 0.0.0.0
