--- a/deployments/mongo-deployment.yaml
+++ b/deployments/mongo-deployment.yaml
@@ -32,8 +32,8 @@ spec:
         ports:
         - containerPort: 27017
         volumeMounts:
-        - name: mongo-data
+        - name: mongo-storage
           mountPath: /data/db
       volumes:
-      - name: mongo-data
-        emptyDir: {} 
+      - name: mongo-storage
+        emptyDir: {}   # This creates an ephemeral volume. 
