--- a/app-secret.yaml
+++ b/app-secret.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: app-secret
-type: Opaque
-stringData:
+data:
   # Sensitive credentials
-  MONGO_USERNAME: "admin"
-  MONGO_PASSWORD: "password"
+  MONGO_USERNAME: YWRtaW4=
+  MONGO_PASSWORD: cGFzc3dvcmQ=
