--- a/myapp-chart/templates/mongodb/deployment.yaml
+++ b/myapp-chart/templates/mongodb/deployment.yaml
@@ -36,4 +36,4 @@ spec:
       volumes:
       - name: mongo-storage
         persistentVolumeClaim:
-          claimName: mongo-pvc
+          claimName: mongo-pvc-{{ .Release.Name }}
