--- a/myapp-chart/templates/mongodb/pv.yaml
+++ b/myapp-chart/templates/mongodb/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mongo-pv
+  name: mongo-pv-{{ .Release.Name }}
 spec:
   capacity:
     storage: {{ .Values.mongodbStorageSize }}
