--- a/myapp-chart/templates/mongodb/pvc.yaml
+++ b/myapp-chart/templates/mongodb/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pvc
+  name: mongo-pvc-{{ .Release.Name }}
 spec:
   accessModes:
     - ReadWriteOnce
