--- a/myapp-chart/templates/mongodb/deployment.yaml
+++ b/myapp-chart/templates/mongodb/deployment.yaml
@@ -21,12 +21,12 @@ spec:
           - name: MONGO_INITDB_ROOT_USERNAME
             valueFrom:
               secretKeyRef:
-                name: mongodb-secret-{{ .Release.Name }}
+                name: mongodb-secret
                 key: MONGO_INITDB_ROOT_USERNAME
           - name: MONGO_INITDB_ROOT_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: mongodb-secret-{{ .Release.Name }}
+                name: mongodb-secret
                 key: MONGO_INITDB_ROOT_PASSWORD
         ports:
           - containerPort: {{ .Values.mongodbPort }}
