--- a/myapp-chart/templates/backend/service.yaml
+++ b/myapp-chart/templates/backend/service.yaml
@@ -8,4 +8,4 @@ spec:
     - port: {{ .Values.backendPort }}
       targetPort: {{ .Values.backendPort }}
   selector:
-    app: backend
+    app: backend-{{ include "my-app.fullname" . }}
