--- a/myapp-chart/templates/secrets.yaml
+++ b/myapp-chart/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mongodb-secret
+  name: mongodb-secret-{{ include "my-app.fullname" . }}
 data:
   # Sensitive credentials
   MONGO_INITDB_ROOT_USERNAME: YWRtaW4=
