--- a/myapp-chart/templates/mongodb/deployment.yaml
+++ b/myapp-chart/templates/mongodb/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: mongodb-{{ include "my-app.fullname" . }}
   labels:
-    app: mongodb
+    app: mongodb-{{ include "my-app.fullname" . }}
 spec:
   replicas: {{ .Values.mongodbReplicas }}
   selector:
     matchLabels:
-      app: mongodb
+      app: mongodb-{{ include "my-app.fullname" . }}
   template:
     metadata:
       labels:
-        app: mongodb
+        app: mongodb-{{ include "my-app.fullname" . }}
     spec:
       containers:
       - name: mongodb
@@ -21,12 +21,12 @@ spec:
           - name: MONGO_INITDB_ROOT_USERNAME
             valueFrom:
               secretKeyRef:
-                name: mongodb-secret
+                name: mongodb-secret-{{ include "my-app.fullname" . }}
                 key: MONGO_INITDB_ROOT_USERNAME
           - name: MONGO_INITDB_ROOT_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: mongodb-secret
+                name: mongodb-secret-{{ include "my-app.fullname" . }}
                 key: MONGO_INITDB_ROOT_PASSWORD
         ports:
           - containerPort: {{ .Values.mongodbPort }}
@@ -36,4 +36,4 @@ spec:
       volumes:
       - name: mongo-storage
         persistentVolumeClaim:
-          claimName: mongo-pvc-{{ .Release.Name }}
+          claimName: mongo-pvc-{{ include "my-app.fullname" . }}
